# crabhash

./: Cargo.toml  Dockerfile  LICENSE.md  README.md
src/: filehandling.rs  main.rs
