[package]
name = "crabhash"
version = "0.0.1"
edition = "2021"
author = "Chase M Clark"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "*"
base64 = "*"
flate2 = "*"
glob = "*"
seq_io = "*"
scoped_threadpool = "*"
clap = { version = "3.2.8", features = ["derive"] }
