[package]
name = "crabhash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "*"
base64 = "*"
flate2 = "*"
glob = "*"
seq_io = "*"
scoped_threadpool = "*"
bzip2 = { version = "0.3.3", optional = true }
cfg-if = "0.1"
failure = "0.1.3"
enum_primitive = "0.1.1"
xz2 = { version = "0.1", optional = true }
